--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "devskilltracker",
   "private": true,
@@ -9,14 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "firebase": "^12.8.0",
-    "react": "^19.2.4",
-    "react-dom": "^19.2.4"
+    "firebase": "^10.12.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.2.2",
+    "vite": "^5.0.8"
   }
 }
